added modules for kafka-connect and kafka-streams, shell scripts for running standalone kafka-connect and log-compaction.

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
     <module>kafka-consumer-elasticsearch</module>
     <module>basic-consumers-producers</module>
     <module>kafka-producer-twitter</module>
+      <module>kafka-connect</module>
+      <module>kafka-streams-filter-tweets</module>
   </modules>
 
   <name>kafka-beginner-examples</name>
